--- a/src/index.html.twig
+++ b/src/index.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html dir="{{ artwork.dir|default('ltr') }}" lang="{{ artwork.lang|default('lang') }}">
+<html dir="{{ artwork.dir|default('ltr') }}" lang="{{ artwork.lang|default('en') }}">
 <head>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
