--- a/src/index.html.twig
+++ b/src/index.html.twig
@@ -22,6 +22,7 @@
     <link rel="apple-touch-icon-precomposed" href="{{ artwork.url }}apple-touch-icon-precomposed.png">
     <link rel="author" href="https://alexanderchristiaanjacob.com/" title="Alexander Christiaan Jacob">
     <link rel="canonical" href="{{ artwork.url }}">
+    <link rel="manifest" href="{{ artwork.url }}manifest.json">
     <style>
         {{ artwork.style }}
     </style>
