--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -1,29 +1,33 @@
 <!doctype html>
-<html dir="ltr" lang="en">
+<html dir="{{ artwork.dir|default('ltr') }}" lang="{{ artwork.lang|default('en') }}">
 <head>
     <meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="application-name" content="canvas">
-    <meta name="description" content="Blank canvas.">
+    <meta name="application-name" content="{{ artwork.title }}">
+    <meta name="description" content="{{ artwork.description }}">
     <meta name="robots" content="all">
-    <meta name="theme-color" content="#a00ade">
+    <meta name="theme-color" content="{{ artwork.themeColor }}">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@ACJ">
     <meta name="twitter:creator" content="@ACJ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="fb:admins" content="509248955">
-    <meta property="og:description" content="Blank canvas.">
-    <meta property="og:image" content="">
-    <meta property="og:title" content="canvas">
+    <meta property="og:description" content="{{ artwork.description }}">
+    <meta property="og:image" content="{{ artwork.image }}">
+    <meta property="og:title" content="{{ artwork.title }}">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="/">
-    <title>canvas</title>
-    <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
+    <meta property="og:url" content="{{ artwork.url }}">
+    <title>{{ artwork.title }}</title>
+    <link rel="apple-touch-icon-precomposed" href="{{ artwork.url }}apple-touch-icon-precomposed.png">
     <link rel="author" href="https://alexanderchristiaanjacob.com/" title="Alexander Christiaan Jacob">
-    <link rel="canonical" href="/">
-    <link rel="manifest" href="/manifest.json">
-    
+    <link rel="canonical" href="{{ artwork.url }}">
+    <link rel="manifest" href="{{ artwork.url }}manifest.json">
+    {% if artwork.style %}
+        <style>
+            {{ artwork.style }}
+        </style>
+    {% endif %}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6227584-61"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -36,10 +40,10 @@
         {
             "@context": "http://schema.org",
             "@type": "VisualArtwork",
-            "name": "canvas",
-            "image": "",
-            "description": "Blank canvas.",
-            "url": "/",
+            "name": "{{ artwork.title }}",
+            "image": "{{ artwork.image }}",
+            "description": "{{ artwork.description }}",
+            "url": "{{ artwork.url }}",
             "creator": [
                 {
                     "@type": "Person",
@@ -55,8 +59,6 @@
     </script>
 </head>
 <body id="top">
-
-<h1>Hello, Canvas!</h1>
-
+{% block body %}{{ body }}{% endblock %}
 </body>
 </html>
