--- a/src/humans.txt.twig
+++ b/src/humans.txt.twig
@@ -1,9 +1,9 @@
 
 /* TEAM */
-    Artist: Alexander Christiaan Jacob
-    Site: https://alexanderchristiaanjacob.com/
+    Artist: {{ artist.name }}
+    Site: {{ artist.url }}
     Twitter: @ACJ
-    Location: The Hague, Netherlands
+    Location: {{ artist.location }}
 
 /* SITE */
     Standards: HTML, CSS
