--- a/src/404.html.twig
+++ b/src/404.html.twig
@@ -5,7 +5,7 @@
     <meta name="robots" content="follow, noarchive, noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>{{ artwork.title }}</title>
-    <link rel="author" href="https://alexanderchristiaanjacob.com/" title="Alexander Christiaan Jacob">
+    <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
     <style>
         {{ artwork.style }}
     </style>
