Allow Twitter handle to be changed.

--- a/src/humans.txt.twig
+++ b/src/humans.txt.twig
@@ -2,7 +2,7 @@
 /* TEAM */
     Artist: {{ artist.name }}
     Site: {{ artist.url }}
-    Twitter: @ACJ
+    Twitter: @{{ artist.twitter }}
     Location: {{ artist.location }}
 
 /* SITE */
