--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -9,8 +9,8 @@
     <meta name="robots" content="all">
     <meta name="theme-color" content="{{ artwork.themeColor }}">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@ACJ">
-    <meta name="twitter:creator" content="@ACJ">
+    <meta name="twitter:site" content="@{{ artist.twitter }}">
+    <meta name="twitter:creator" content="@{{ artist.twitter }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="fb:admins" content="509248955">
     <meta property="og:description" content="{{ artwork.description }}">
@@ -49,7 +49,7 @@
                     "@type": "Person",
                     "name": "{{ artist.name }}",
                     "url": "{{ artist.url }}",
-                    "sameAs": "https://twitter.com/acj"
+                    "sameAs": "https://twitter.com/{{ artist.twitter|lower }}"
                 }
             ],
             "artform": "website",
