Conditional Twitter handle.

--- a/src/humans.txt.twig
+++ b/src/humans.txt.twig
@@ -2,9 +2,11 @@
 /* TEAM */
     Artist: {{ artist.name }}
     Site: {{ artist.url }}
+    {% if artist.twitter %}
     Twitter: @{{ artist.twitter }}
+    {% endif %}
     Location: {{ artist.location }}
 
 /* SITE */
-    Standards: HTML, CSS
-    IDE: PhpStorm
+    Standards: HTML, CSS, OGP
+    Preprocessing: Gulp, Twig
