--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -9,8 +9,10 @@
     <meta name="robots" content="all">
     <meta name="theme-color" content="{{ artwork.themeColor }}">
     <meta name="twitter:card" content="summary_large_image">
+    {% if artist.twitter %}
     <meta name="twitter:site" content="@{{ artist.twitter }}">
     <meta name="twitter:creator" content="@{{ artist.twitter }}">
+    {% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="fb:admins" content="509248955">
     <meta property="og:description" content="{{ artwork.description }}">
@@ -48,8 +50,8 @@
                 {
                     "@type": "Person",
                     "name": "{{ artist.name }}",
-                    "url": "{{ artist.url }}",
-                    "sameAs": "https://twitter.com/{{ artist.twitter|lower }}"
+                    "url": "{{ artist.url }}"{% if artist.twitter %},
+                    "sameAs": "https://twitter.com/{{ artist.twitter|lower }}"{% endif %}
                 }
             ],
             "artform": "website",
