--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -9,10 +9,10 @@
     <meta name="robots" content="all">
     <meta name="theme-color" content="{{ artwork.themeColor }}">
     <meta name="twitter:card" content="summary_large_image">
-    {% if artist.twitter %}
+    {%- if artist.twitter %}
     <meta name="twitter:site" content="@{{ artist.twitter }}">
     <meta name="twitter:creator" content="@{{ artist.twitter }}">
-    {% endif %}
+    {% endif -%}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="fb:admins" content="509248955">
     <meta property="og:description" content="{{ artwork.description }}">
@@ -61,6 +61,6 @@
     </script>
 </head>
 <body id="top">
-{% block body %}{{ body }}{% endblock %}
+{%- block body %}{{ body }}{% endblock -%}
 </body>
 </html>
