--- a/src/humans.txt.twig
+++ b/src/humans.txt.twig
@@ -2,9 +2,7 @@
 /* TEAM */
     Artist: {{ artist.name }}
     Site: {{ artist.url }}
-    {% if artist.twitter %}
-    Twitter: @{{ artist.twitter }}
-    {% endif %}
+    {% if artist.twitter %}Twitter: @{{ artist.twitter }}{% endif %}
     Location: {{ artist.location }}
 
 /* SITE */
