--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -29,7 +29,7 @@
         <style>
             {{ artwork.style }}
         </style>
-    {% endif %}
+    {% endif -%}
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6227584-61"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -62,5 +62,10 @@
 </head>
 <body id="top">
 {%- block body %}{{ body }}{% endblock -%}
+{%- if block('script') is defined %}
+<script>
+{% block script %}{% endblock %}
+</script>
+{% endif -%}
 </body>
 </html>
