--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -16,13 +16,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="fb:admins" content="509248955">
     <meta property="og:description" content="{{ artwork.description }}">
+    {%- if artwork.image %}
     <meta property="og:image" content="{{ artwork.image }}">
+    {%- endif %}
     <meta property="og:title" content="{{ artwork.title }}">
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ artwork.url }}">
     <title>{{ artwork.title }}</title>
     <link rel="apple-touch-icon-precomposed" href="{{ artwork.url }}apple-touch-icon-precomposed.png">
+    {%- if artist.url and artist.name %}
     <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
+    {%- elseif artist.url %}
+    <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
+    {%- elseif artist.name %}
+    <meta name="author" content="{{ artist.name }}">
+    {%- endif %}
     <link rel="canonical" href="{{ artwork.url }}">
     <link rel="manifest" href="{{ artwork.url }}manifest.json">
     {% if artwork.style %}
@@ -43,7 +51,8 @@
             "@context": "http://schema.org",
             "@type": "VisualArtwork",
             "name": "{{ artwork.title }}",
-            "image": "{{ artwork.image }}",
+            {%- if artwork.image %}
+            "image": "{{ artwork.image }}",{% endif %}
             "description": "{{ artwork.description }}",
             "url": "{{ artwork.url }}",
             "creator": [
