--- a/src/index.html.twig
+++ b/src/index.html.twig
@@ -5,3 +5,8 @@
 {% block script %}
 "use strict";
 {% endblock %}
+{% block style %}
+    html {
+    background: {{ artwork.themeColor }};
+    }
+{% endblock %}
