--- a/src/404.html.twig
+++ b/src/404.html.twig
@@ -5,18 +5,28 @@
     <meta name="robots" content="follow, noarchive, noindex">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>{{ artwork.title }}</title>
-    <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
-    <style>
-        {{ artwork.style }}
-    </style>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6227584-61"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    {%- if artist.url and artist.name %}
+        <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
+    {%- elseif artist.url %}
+        <link rel="author" href="{{ artist.url }}" title="{{ artist.name }}">
+    {%- elseif artist.name %}
+        <meta name="author" content="{{ artist.name }}">
+    {%- endif %}
+    {%- if block('style') is defined %}
+        <style>
+            {% block style %}{% endblock %}
+        </style>
+    {% endif -%}
+    {%- if gtm %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ gtm }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        gtag('config', 'UA-6227584-61');
-    </script>
+            gtag('config', '{{ gtm }}');
+        </script>
+    {%- endif %}
 </head>
 <body id="top">
 {% block body %}
