--- a/src/browserconfig.xml.twig
+++ b/src/browserconfig.xml.twig
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-{# Please read: https://msdn.microsoft.com/en-us/library/ie/dn455106.aspx #}
-<browserconfig>
+{# Please read: https://msdn.microsoft.com/en-us/library/ie/dn455106.aspx #}<browserconfig>
     <msapplication>
         <tile>
-            <square70x70logo src="apple-touch-icon-precomposed.png"/>
-            <square150x150logo src="apple-touch-icon-precomposed.png"/>
-            <square310x310logo src="apple-touch-icon-precomposed.png"/>
+            <square70x70logo src="{{ artwork.url }}apple-touch-icon-precomposed.png"/>
+            <square150x150logo src="{{ artwork.url }}apple-touch-icon-precomposed.png"/>
+            <square310x310logo src="{{ artwork.url }}apple-touch-icon-precomposed.png"/>
             <TileColor>{{ artwork.themeColor }}</TileColor>
         </tile>
     </msapplication>
