Add optional help link.

--- a/src/canvas.html.twig
+++ b/src/canvas.html.twig
@@ -37,6 +37,9 @@
     <meta name="author" content="{{ artist.name }}">
     {%- endif %}
     <link rel="canonical" href="{{ artwork.url }}">
+    {%- if artwork.help %}
+    <link rel="help" href="{{ artwork.help }}">
+    {%- endif %}
     <link rel="manifest" href="{{ artwork.url }}manifest.json">
     {%- if block('style') is defined %}
     <style>
