--- a/src/manifest.webmanifest.twig
+++ b/src/manifest.webmanifest.twig
@@ -1,4 +1,5 @@
 {
+    "background_color": "{{ artwork.background_color }}",
     "description": "{{ artwork.description }}",
     "display": "fullscreen",
     "icons": [
